# full-stack-web-development-with-flask

./: README.md  pyproject.toml  snippets.txt
.devcontainer/: devcontainer.json
application/: __init__.py  routes.py
application/templates/: courses.html  enrollment.html  index.html  layout.html
application/templates/includes/: nav.html
